Established basic UI

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "rootDir": "/",
+    "baseUrl": "./src",
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
