Cleaned backend, added registry page

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "rootDir": "/",
+    "rootDir": "./",
     "baseUrl": "./src",
     "isolatedModules": true,
     "noEmit": true,
