Switched deploy script to npm from yarn (testing)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "backend",
         "shared"
     ],
-    "scripts": {"deploy:backend": "cd backend && yarn install && yarn run build && yarn start:prod"},
+    "scripts": {"deploy:backend": "cd backend && npm install && npm run build && npm run start:prod"},
     "name": "root",
     "version": "1.0.0",
     "description": "Root project for managing a complex game of classic assassin.",
